# authSDK

./: .dockerignore  .env-sample  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  RULES.md  SECURITY.md  alembic.ini  coverage.json  pyproject.toml  scheduler.py  v1.md  v2.md  worker.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
app/: cli.py  config.py  dependencies.py  error_handlers.py  main.py  service_registry.py
app/core/: api_keys.py  browser_sessions.py  callable_compat.py  client_ip.py  docs.py  jwt.py  oauth.py  otp.py  saml.py  sessions.py  signing_keys.py  user_agent.py
app/db/: __init__.py  base.py  session.py
app/middleware/: __init__.py  correlation_id.py  logging.py  metrics.py  rate_limit.py  security_headers.py  tracing.py
app/models/: __init__.py  api_key.py  audit_event.py  oauth_client.py  recovery_code.py  session.py  signing_key.py  user.py  webhook_delivery.py  webhook_endpoint.py
app/routers/: _admin_access.py  admin.py  apikeys.py  auth.py  health.py  lifecycle.py  oauth.py  otp.py  saml.py  self_service.py  webhooks.py
app/runtime/: __init__.py  shared_jwt_keys.py
app/schemas/: admin.py  api_key.py  lifecycle.py  otp.py  self_service.py  token.py  user.py  validation.py  webhook.py
app/services/: admin_service.py  api_key_service.py  audit_service.py  brute_force_service.py  erasure_service.py  lifecycle_service.py  m2m_service.py  mfa_service.py  oauth_service.py  otp_service.py  pagination.py  saml_service.py  token_service.py  user_service.py  webhook_service.py
docker/: Dockerfile  docker-compose.yml
docs/: README.md  admin-dashboard-integration.md  architecture.md  browser-consumer-quickstart.md  configuration.md  integrate-sdk.md  operations.md  security-review-step14.md  security-review.md  self-service-sessions.md  service-api.md  testing.md  troubleshooting.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secrets.yaml  service.yaml
loadtests/: README.md  locustfile.py  seed_load_fixtures.py  seed_load_user.py  seed_step14_fixtures.py
loadtests/results/: action-otp.txt  admin-pagination.txt  login.txt  m2m.txt  otp-login.txt  refresh.txt  webhook-volume.txt
migrations/: env.py  script.py.mako
migrations/versions/: 20260221_0001_initial_schema.py  20260221_0002_signing_keys.py  20260221_0003_audit_events.py  20260221_0004_user_role.py  20260221_0005_email_verification_fields.py  20260305_0006_email_otp_enabled.py  20260314_0007_password_reset_fields.py  20260314_0008_session_auth_time.py  20260315_0009_oauth_clients.py  20260316_0010_webhooks.py  20260316_0011_api_key_name.py  20260416_0012_session_device_metadata.py  20260416_0013_session_suspicion_flags.py  20260424_0014_mfa_core.py
sdk/: README.md  __init__.py  cache.py  client.py  dependencies.py  exceptions.py  jwt_utils.py  middleware.py  pyproject.toml  types.py
tests/integration/: conftest.py  test_admin_router_real.py  test_apikeys_router_real.py  test_audit_events_real.py  test_auth_introspect.py  test_auth_router_real.py  test_auth_token_client_credentials.py  test_brute_force_real.py  test_cursor_pagination_foundation.py  test_email_otp_real.py  test_email_verification_real.py  test_error_handlers.py  test_gdpr_erasure_real.py  test_health_router.py  test_health_router_real.py  test_m2m_client_credentials_real.py  test_mfa_schema_real.py  test_middleware_stack.py  test_oauth_router.py  test_oauth_router_real.py  test_password_reset_real.py  test_saml_router.py  test_saml_router_real.py  test_sdk_middleware.py  test_sdk_require_role.py  test_session_schema_real.py  test_signing_keys_rotation.py  test_sms_local_real.py  test_user_roles_real.py  test_webhook_system_real.py
tests/scripts/: check_coverage_thresholds.py
tests/unit/: conftest.py  test_admin_access_browser_sessions.py  test_admin_service.py  test_admin_service_additional.py  test_admin_service_edge_cases.py  test_admin_service_edge_step13.py  test_admin_service_revoke_reasons.py  test_api_key_service.py  test_app_production_hardening.py  test_audit_service.py  test_auth_audit_events.py  test_browser_sessions.py  test_brute_force_service.py  test_erasure_service.py  (+65 more)
workers/: __init__.py  maintenance_worker.py  webhook_worker.py
(+11 files in other folders)
