[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication microservice and SDK scaffold."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Auth Service Team" }]
dependencies = [
  "alembic==1.18.4",
  "asyncpg==0.31.0",
  "authlib==1.6.8",
  "bcrypt==4.3.0",
  "cachetools==7.0.1",
  "fastapi==0.129.2",
  "httpx==0.28.1",
  "opentelemetry-api==1.29.0",
  "opentelemetry-sdk==1.29.0",
  "passlib[bcrypt]==1.7.4",
  "prometheus-fastapi-instrumentator==7.1.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "python-jose[cryptography]==3.5.0",
  "python3-saml==1.16.0",
  "redis==7.2.0",
  "sqlalchemy==2.0.46",
  "starlette==0.41.3",
  "structlog==25.5.0",
  "uvicorn[standard]==0.41.0",
]

[project.optional-dependencies]
dev = [
  "black==26.1.0",
  "locust==2.43.3",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "ruff==0.15.4",
  "testcontainers[postgres,redis]==4.14.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "sdk"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
